--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ members = [
     "guessing_game",
     "hello_cargo",
     # "hello_world", // This is not a Cargo crate
-    "loops",
+    "loops", "ownership",
     "twelve-days-of-christmas",
     "variables",
 ]
