--- a/enums-and-patterns/Cargo.toml
+++ b/enums-and-patterns/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+log = "0.4.21"
+log4rs = "1.3.0"
