--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ members = [
     "hello_cargo",
     "logging",
     # "hello_world", // This is not a Cargo crate
-    "loops",
+    "loops", "managing-growing-project",
     "ownership",
     "rectangles",
     "references-and-borrowing",
