7-d: add example restaurant lib with modules declaration

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ members = [ "backyard",
     "loops", "managing-growing-project",
     "ownership",
     "rectangles",
-    "references-and-borrowing",
+    "references-and-borrowing", "restaurant",
     "slices",
     "structs",
     "twelve-days-of-christmas",
