8-a: set up vectors bin

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ members = [ "backyard",
     "slices",
     "structs",
     "twelve-days-of-christmas",
-    "variables",
+    "variables", "vectors",
 ]
 
 resolver = "1"
