8-f: set up strings bin

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ members = [ "backyard",
     "ownership",
     "rectangles",
     "references-and-borrowing", "restaurant",
-    "slices",
+    "slices", "strings",
     "structs",
     "twelve-days-of-christmas",
     "variables", "vectors",
