--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ members = [ "backyard",
     "converter", "enums-and-patterns",
     "fibonacci",
     "functions",
-    "guessing_game",
+    "guessing_game", "hashmaps",
     "hello_cargo",
     "logging",
     # "hello_world", // This is not a Cargo crate
