11-a : set up adder lib with test11-a : set up adder lib with test11-a : set up adder lib with test11-a : set up adder lib with test11-a : set up adder lib with test11-a : set up adder lib with test11-a : set up adder lib with test11-a : set up adder lib with test11-a : set up adder lib with test11-a : set up adder lib with test11-a : set up adder lib with test

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 
-members = [ "backyard",
+members = [ "adder", "backyard",
     "branches",
     "converter", "enums-and-patterns",
     "fibonacci",
