ch-12: setup minigrep project
Ref: #36

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ members = [
     "structs",
     "twelve-days-of-christmas",
     "variables",
-    "vectors",
+    "vectors", "minigrep",
 ]
 
 resolver = "1"
